# dart-implement

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE_ANALYSIS.md  README.md  SIMPLIFICATION_SUMMARY.md  SYSTEM_EXPLANATION.md  TESTING_GUIDE.md  architecture_analysis.md  dart_attack.py  dart_chinese.py  dart_main.py  dart_main_complete.py  dart_simple.py  problem.csv  pyproject.toml  run_dart_tests.py  simple_train_dart.py  test_dart_simple.py  train_dart.py
dart_system/: README.md  __init__.py  main.py
dart_system/core/: __init__.py  dart_controller.py  dart_pipeline.py
dart_system/data/: __init__.py  data_loader.py
dart_system/embedding/: __init__.py  chinese_embedding.py
dart_system/noise/: __init__.py  diffusion_noise.py
dart_system/reconstruction/: __init__.py  vec2text.py
dart_system/toxicity/: __init__.py  chinese_classifier.py
dart_system/training/: __init__.py  dart_trainer.py  dataset.py  noise_scheduler.py  ppo_loss.py  vec2text_wrapper.py
tests/: test_data_loader.py  test_embedding.py  test_integration.py  test_noise.py  test_performance.py  test_reconstruction.py  test_simple.py
