[project]
name = "diffusion-dart"
version = "0.1.0"
description = "Simplified LLM testing with DART parameter configuration"
authors = [{name = "DART Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.5,<2.8",  # adjust range as needed
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
dart-test = "dart_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dart_system"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"