[project]
name = "diffusion-dart"
version = "0.1.0"
description = "Simplified LLM testing with DART parameter configuration"
authors = [{name = "DART Team"}]
requires-python = ">=3.9,<3.10"
dependencies = [
    "pyarrow==6.0.1",
    "torch>=2.1.0,<2.2.0", # PyTorch 2.1 compatible with Python 3.9
    "transformers>=4.35.0,<4.36.0", # transformers 4.35.x compatible with PyTorch 2.1
    "datasets==2.4.0",
    "accelerate>=0.20.0,<0.25.0", # Compatible with transformers 4.35
    "numpy>=1.21.0,<2",
    "pandas>=1.5.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "vec2text>=0.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
dart-test = "dart_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dart_system"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
